tooling/lsp-server/examples/errors/unterminated_char_class.strl
# Error Example: Unterminated Character Class
# Expected: Error at end of line 4
# Message: "Unterminated character class"

[a-z